5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1679_1100.log
== TEST (2019-04-30 15:57:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= input ("Digite o valor de uma cédula R$ 2, 5, 10, 20, 50 ou 100:  ")
print x

-- ERROR:
File "XXXX", line 6
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(x)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:57:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= input ("Digite o valor de uma cédula R$ 2, 5, 10, 20, 50 ou 100:  ")
print (X)

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:58:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  ")
print (X)

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:58:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  ")
print ("R$: X")

-- OUTPUT:
R$: X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:00:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  ")
print ("R$: ", X)

-- OUTPUT:
R$:  100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:06:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  ")
print ("R$: ", X)

if X > 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100
	else:
		print "INVALIDO"
-- ERROR:
File "XXXX", line 8
    if X > 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", X)

if X != 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100
		print "Invalido"
-- ERROR:
File "XXXX", line 8
    if X != 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:19:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", X)

if X != 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100
	print "Invalido"
-- ERROR:
File "XXXX", line 8
    if X != 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:20:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", X)

if X != 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100:
	print "Invalido"
-- ERROR:
File "XXXX", line 9
    print "Invalido"
                   ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Invalido")?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:20:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", X)

if X != 2 or X !=5 or X !=10 or X !=20 or X !=50 or X !=100:
	print ("Invalido")
-- OUTPUT:
Entrada:  100
Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:43:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", X)

if X != 2 and X !=5 and X !=10 and X !=20 and X !=50 and X !=100:
	print ("Invalido")
-- OUTPUT:
Entrada:  100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:43:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

X= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", X)

if X != 2 and X !=5 and X !=10 and X !=20 and X !=50 and X !=100:
	print ("Invalido")
-- OUTPUT:
Entrada:  100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:50:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", X)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ("Entrada: ", X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:51:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:51:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:51:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- EXECUTION TIME:
0.146243
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:51:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ", x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:52:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada: ",x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:52:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada:",x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:52:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada:",x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- EXECUTION TIME:
0.234445
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:53:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada:",x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Animal: Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:53:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada:",x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Animal: Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:53:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada:",x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Animal: Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- EXECUTION TIME:
0.193483
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:57:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

x= int(input ("Digite o valor de uma cedula R$ 2, 5, 10, 20, 50 ou 100:  "))
print ("Entrada:",x)

if x != 2 and x !=5 and x !=10 and x !=20 and x !=50 and x !=100:
	print ("Animal: Invalido")
elif (x==2):
	print ("Animal: Tartaruga")
elif (x==5):
	print ("Animal: Garca")
elif (x==10):
	print ("Animal: Arara")
elif (x==20):
	print ("Animal: Mico-leao-dourado")
elif (x==50):
	print ("Animal: Onca-pintada")
elif (x==100):
	print ("Animal: Garoupa")
-- EXECUTION TIME:
0.164296
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
